@@ -1,6 +1,6 @@
 Package: clustMixType
-Version: 0.2-4
-Date: 2019-04-17
+Version: 0.2-5
+Date: 2020-04-22
 Title: k-Prototypes Clustering for Mixed Variable-Type Data
 Author: Gero Szepannek [aut, cre], Rabea Aschenbruck [aut]
 Maintainer: Gero Szepannek <gero.szepannek@web.de>
