@@ -1,4 +1,5 @@
 
+clustMixType_0.2-5  2020-04-22  - fix output for validation indices: k_opt (integer) and index_opt (numeric) instead of named numeric k_opt 
 clustMixType_0.2-4  2020-04-16  - bug fix ln. 165f 
 				- assign cluster NA to obs. with NAs in all variables
 				- l. 287 & 330 only update prototypes for variables where not all values are NA
